@@ -29,7 +29,7 @@ void
 testTortureExecute (void)
 {
 #if !defined (__SDCC_mcs51) && !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
-#if 0 // longlong failure on 32-bit host
+#if 1 // longlong failure on 32-bit host
   if (build(0, 1) != 0x0000000000000001LL)
     ASSERT(0);
   if (build(0, 0) != 0x0000000000000000LL)
