@@ -36,7 +36,7 @@ foo2 (unsigned long long value)
 void
 testTortureExecute (void)
 {
-#if 0 // failure of longlong on 32-bit host
+#if 1 // failure of longlong on 32-bit host
 #if !defined (__SDCC_mcs51) && !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
   unsigned long long value = 0xc000000000000001LL;
   int x, y;
